--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio Web</title>
+    </head>
+    <h1>Vitor Augusto Martins de Oliveira</h1>
+    <img src="https://media.licdn.com/dms/image/C4D03AQEFfOT4MLSrfQ/profile-displayphoto-shrink_200_200/0/1649203689552?e=1687996800&v=beta&t=D9TugDU9whJS-bRwdAhHW4PcRjPXd7VDVZ4I1Bd6y6U"
+     alt="foto de casamento" width="300px">
+     <h3>Me chamo Vitor Augusto, sou natural de Vitória - Espirito Santo.
+        Morei durante um tempo na Austrália, porém o Brasil é o melhor pais do mundo!
+     </h3>
+     <h1>Habilidades</h1>
+    <ol>
+        <li>Comunicativo</li>
+        <li>Bom ouvinte</li>
+        <li>Amigo</li>
+
+    </ol>
+    <h2>Link para melhor conteúdo de Jiu-jítsu</h2>
+    <a href="https://www.graciemag.com/pt-br/" target="_blank">Gracie Mag</a>
+<body>
+    
+</body>
+</html>
