--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio Web</title>
+    </head>
+    <h1>Vitor Augusto Martins de Oliveira</h1>
+    <img src="C16D015F-A46C-42C9-A90C-BA328D1F2897_1_105_c.jpeg"
+        alt="foto em Pedra Azul - cervejaria Ronchi" width="300px">
+     <h3>Me chamo Vitor Augusto, sou natural de Vitória - Espirito Santo.
+        Morei durante um tempo na Austrália, porém o Brasil é o melhor pais do mundo!
+     </h3>
+     <h1>Habilidades</h1>
+    <ol>
+        <li>Comunicativo</li>
+        <li>Bom ouvinte</li>
+        <li>Amigo</li>
+
+    </ol>
+    <h2>
+        <a href="https://www.graciemag.com/pt-br/" target="_blank">Link </a> para melhor conteúdo de Jiu-jítsu
+    </h2>
+    
+<body>
+    
+</body>
+</html>
