adiciona estilo e cor

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     }
 
     .lista {
-        color: gray
+        color: green
         }
     </style>
 
     </head>
-    
+
     <body>
 
 
